k8s/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-stats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitops-k8s
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  template:
    metadata:
      labels:
        app: gitops-k8s
    spec:
      # affinity:
      #   podAntiAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       - labelSelector:
      #           matchExpressions:
      #             - key: app
      #               operator: In
      #               values:
      #                 - gitops-k8s
      #         topologyKey: "kubernetes.io/hostname"
      containers:
        - name: network-stats
          image: dxas90/network-stats:latest # original imagen just in case that someone needs it
          ports:
            - name: web
              containerPort: 5000
              protocol: TCP
          resources:
            limits:
              cpu: 25m
              memory: 263M
            requests:
              cpu: 25m
              memory: 263M
          # https://blog.pipetail.io/posts/2020-05-04-most-common-mistakes-k8s/
          readinessProbe:
            httpGet:
              path: /healthz
              port: web
            initialDelaySeconds: 3
            timeoutSeconds: 2
            failureThreshold: 5
          # lifecycle:
          #   preStop:
          #     exec:
          #       command: ["sleep", "15"]
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /secrets
              name: secrets
            - mountPath: /cache
              name: cache-volume
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        fsGroup: 65534
      serviceAccountName: k8s-network-stats
      # https://kubernetes.io/docs/concepts/containers/images/#referring-to-an-imagepullsecrets-on-a-pod
      # imagePullSecrets:
      #   - name: pull-registry
      restartPolicy: Always
      volumes:
        - name: secrets
          persistentVolumeClaim:
            claimName: "network-stats"
        - name: cache-volume
          emptyDir: {}
status: {}
