k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: network-stats
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
  ports:
    - name: "web"
      port: 8080
      targetPort: web
  selector:
    app: gitops-k8s
status:
  loadBalancer: {}
