k8s/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: network-stats
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - stats.dxas90.xyz
      secretName: stats-dxas90-xyz-prod
  rules:
    - host: stats.dxas90.xyz
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: network-stats
              servicePort: web
