k8s/base/networkpolicy.yaml
# https://ahmet.im/blog/kubernetes-network-policy/
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: network-stats
spec:
  podSelector:
    matchLabels: {}
  ingress:
    - {}
    # - from:
    #     - namespaceSelector:
    #         matchLabels:
    #           purpose: infrastructure
